OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.7.4 (2019-08-??)
------------------
Bugs:
- MA2: Kortingen worden niet goed doorgegeven als prijzen ex btw zijn ingevoerd.
  getBaseShippingDiscountAmount() is inc of ex btw afhankelijk van of korting
  voor of na btw verrrekend wordt.
- WC: Acumulus info box op bestellingpagina verdwijnt bij handmatige sortering
  van de info boxen.
- WC: Acumulus info box op bestellingpagina toont verkeerde bedragen, en
  daardoor een waarschuwing, bij facturen met buitenlandse btw.

Refactorings:
- WC: Use $recalculatePrice (with the tag to recalculate as value) instead of
  boolean $recalculateUnitPrice.


5.7.3 (2019-06-25) (MA2 only)
-----------------------------
Features:
- Added support for the Fooman surcharge payment module.

5.7.2 (2019-05-15) (JOO only)
-----------------------------
Bugs:
- Errors in the install process:
  * syntax error in <version> tag in xml files.
  * class inheritance dependency on Virtuemart.

Refactorings:
- JOO: Registration of our own autoloader now takes place in only 1 place: the
  Acumulus Joomla model.

5.7.1 (2019-05-02) (WC only)
----------------------------
Bugs:
- WC: tweaked the precision settings again.
- WC: Acumulus info box op bestellingpagina toont verkeerde status voor credit
  facturen (nl dezelfde status als voor de oorspronkelijke bestelling).
- WC: Acumulus info box op bestellingpagina stuurt de oorspronkelijke factuur
  bij klik op "Opnieuw verzenden" bij een credit factuur.

Refactorings:
- ALL: Number::getDivisionRange(): all parameters are now obligatory.

5.7.0 (2019-04-03)
------------------
Features:
- ALL: Prevent sending an invoice twice at the same moment. Some online payment